Small layout changes

--- a/exploded-archives/eGov.ear/eGov_war/login.xhtml
+++ b/exploded-archives/eGov.ear/eGov_war/login.xhtml
@@ -19,7 +19,7 @@
 
             <div class="dialog">
                 <h:panelGrid columns="2" rowClasses="prop" columnClasses="name,value">
-                    <h:outputLabel for="username">Username</h:outputLabel>
+                    <h:outputLabel for="username">Título Eleitoral</h:outputLabel>
                     <h:inputText id="username"
                               value="#{credentials.username}"/>
                     <h:outputLabel for="password">Password</h:outputLabel>
@@ -30,10 +30,6 @@
                                           value="#{rememberMe.enabled}"/>
                 </h:panelGrid>
             </div>
-
-            <p>
-              <i>Note - </i> You may login with the username 'admin' and a blank password.
-            </p>
 
         </rich:panel>
 
